# IAcf

./: .gitignore  CRA_COMPLIANCE.md  Header.txt  IACF-License.txt  SBOM.md  SECURITY.md  conanfile.py  sbom.json  sbom.spdx.json
.github/workflows/: TEAMCITY_INTEGRATION.md  teamcity-trigger.yml
Config/: BaseOnly.awc  BaseOnly.xpc  CopyRules.bat  Core.xpc  Full.xpc  IacfConfig.awc  IacfCore.xpc  IacfFull.xpc
Config/CMake/: IAcfConfig.cmake  IAcfEnv.cmake  OpenCV_3_3_1.cmake  OpenCV_4_5_3.cmake  Qwt.cmake  Qwt3d.cmake  zlib.cmake
Config/QMake/: Iacf.pri  OpenCV_3_3_0.pri  OpenCV_3_3_1.pri  OpenCV_4_5_3.pri  Qwt.pri  Qwt3d.pri  zlib.pri
Config/Qbs/: StaticProduct.qbs
Config/Tortoise/: UpdateVersion.cmd
Config/VC8/: Acf.rules  QtUIForm.rules
Config/VC9/: Acf.rules
Docs/Images/: InstallerImage.psp
Impl/AbcPck/: AbcPck.cpp
Impl/AvtPck/: AvtPck.cpp  AvtPck.h
Impl/CboxPck/: CboxPck.cpp  CboxPck.h
Impl/Dc1394Pck/: Dc1394Pck.cpp  Dc1394Pck.h
Impl/Dc1394Pck/CMake/: CMakeLists.txt
Impl/Ecl/: .cproject  .project  ConvertImpl.js.lnk  ConvertIncludes-test.js.lnk  ConvertIncludes.js.lnk
Impl/FfMpegPck/: FfMpegPck.cpp  FfMpegPck.h
Impl/FfMpegPck/CMake/: CMakeLists.txt
Impl/IacfBasePck/: IacfBasePck.cpp  IacfBasePck.h
Impl/IacfLoc/: IacfLoc.qrc  Iacf_de_DE.ts  Update_de_DE.bat  Update_en_US.bat  Update_pl_PL.bat  Update_ru_RU.bat
Impl/IacfQtPck/: IacfQtPck.cpp  IacfQtPck.h
Impl/IprPck/: IprPck.h  Main.cpp
Impl/MePck/: CChannelAddressParamComp.cpp  CChannelAddressParamComp.h  CChannelSelectionNode.cpp  CChannelSelectionNode.h  CMeContext.cpp  CMeContext.h  CMeilhausSimpleComp.cpp  CMeilhausSimpleComp.h  IMeilhausAccess.h  MePck.cpp  MePck.h  imebase.h
Impl/MilPck/: MilPck.cpp  MilPck.h
Impl/OpenCvPck/: OpenCvPck.cpp  OpenCvPck.h
Impl/OpenCvPck/CMake/: CMakeLists.txt
Impl/PhononPck/: PhononPck.cpp  PhononPck.h
Impl/ProdPck/: Main.cpp  ProdPck.h
Impl/QMake/: Component.pro
Impl/QSciPck/: QSciPck.cpp  QSciPck.h
Impl/QSciPck/CMake/: CMakeLists.txt
Impl/QaxPck/: QaxPck.cpp  QaxPck.h
Impl/QaxPck/CMake/: CMakeLists.txt
Impl/QtCamPck/: QtCamPck.cpp  QtCamPck.h
Impl/QtIprPck/: QtIprPck.cpp  QtIprPck.h
Impl/QtProdPck/: QtProdPck.cpp  QtProdPck.h
Impl/QtSwrPck/: QtSwrPck.cpp  QtSwrPck.h
Impl/QwtPck/: QwtPck.cpp  QwtPck.h
Impl/QwtPck/CMake/: CMakeLists.txt
Impl/SmaGigEPck/: SmaGigEPck.cpp  SmaGigEPck.h
Impl/SwrPck/: SwrPck.cpp  SwrPck.h
Impl/VC10/: ConvertAllFromQMake.bat
Impl/VC8/: ConvertProjFromVC9.bat  IacfAll.sln  _Install.vcproj  _LibsReady.vcproj
Impl/VC9/: BuildAll.bat  IacfAll.sln  _LibsReady.vcproj
Impl/WinPck/: WinPck.cpp  WinPck.h
Impl/Xcd/: ConvertImpl.bat  ConvertImpl.js.lnk  ConvertIncludes-test.js.lnk  ConvertIncludes.bat  ConvertIncludes.js.lnk  ConvertTutorial.bat
Impl/ZlibPck/: ZlibPck.cpp  ZlibPck.h
Include/iabc/: CServiceApplicationComp.cpp  CServiceApplicationComp.h
Include/iavt/: CFireGrabAcquisitionComp.cpp  CFireGrabAcquisitionComp.h  iavt.h
Include/icam/: CAcquisitionConstraintsComp.cpp  CAcquisitionConstraintsComp.h  CExposureParamsComp.cpp  CExposureParamsComp.h  CMemoryAcquisitionComp.cpp  CMemoryAcquisitionComp.h  CSnapBitmapSupplierComp.cpp  CSnapBitmapSupplierComp.h  CTriggerParamsComp.cpp  CTriggerParamsComp.h  IBitmapAcquisition.h  IBitmapSupplier.h  IExposureParams.h  ITriggerConstraints.h  ITriggerParams.h
Include/icbox/: CMemoryBankSerializerComp.cpp  CMemoryBankSerializerComp.h  icbox.h
Include/icntl/: CDriverControllerComp.cpp  CDriverControllerComp.h  CEjectorParamsComp.cpp  CEjectorParamsComp.h  CInspectionUnitParamsComp.cpp  CInspectionUnitParamsComp.h  CLineParamsComp.cpp  CLineParamsComp.h  CMultiLineParamsComp.cpp  CMultiLineParamsComp.h  IAutomaticController.h  IEjectorController.h  IEjectorParams.h  IGeneralResultProvider.h  IInspectionUnitController.h  IInspectionUnitParams.h  ILineController.h  ILineParams.h  IMultiLineController.h  IMultiLineParams.h  IObjectInspection.h  icntl.h
Include/idc1394/: CSimpleCameraComp.cpp  CSimpleCameraComp.h
Include/idev/: CDeviceInfo.cpp  CDeviceInfo.h  IDeviceDescription.h  IDeviceInfo.h
Include/iinsp/: CComposedInspectionTaskComp.cpp  CComposedInspectionTaskComp.h  CInspectionComp.cpp  CInspectionComp.h  CInspectionTaskComp.cpp  CInspectionTaskComp.h  IInspectionTask.h  IacfVersion.h.xtrsvn  VersionInfo.arx.xtrsvn
Include/iipr/: CCaliperBasedPositionSupplierComp.cpp  CCaliperBasedPositionSupplierComp.h  CCaliperFeature.cpp  CCaliperFeature.h  CCaliperParamsComp.cpp  CCaliperParamsComp.h  CCircleFindProcessorComp.cpp  CCircleFindProcessorComp.h  CCircleFinderParams.cpp  CCircleFinderParams.h  CCircleFinderParamsComp.cpp  CCircleFinderParamsComp.h  CConvolutionKernel2d.h  CConvolutionProcessorComp.cpp  CDelegatedBitmapSupplierComp.cpp  CDelegatedBitmapSupplierComp.h  CExtremumCaliperProcessor.cpp  CExtremumCaliperProcessor.h  CExtremumCaliperProcessorComp.cpp  CExtremumCaliperProcessorComp.h  CFeatureToImageMapperProcessorComp.cpp  CFeatureToImageMapperProcessorComp.h  CFeaturesContainer.cpp  CFeaturesContainer.h  CGaussian2dFilterParams.h  CHeaviestFeatureConsumer.cpp  CHeaviestFeatureConsumer.h  CImageCropProcessorComp.h  CImageHistogramProcessorComp.cpp  (+78 more)
Include/iqwt3d/CMake/: CMakeLists.txt
Install/: Compile_Setup.bat  CreateDistribution.bat  CreateScripts.alx  CreateScripts.arx  Create_Doxyfile.alx  Create_Doxyfile.arx  Create_TechnicalDoc.bat  Create_VC8_Commercial.alx  Create_VC8_Commercial.arx  Create_VC9_Commercial.alx  Create_VC9_Commercial.arx  Create_VC9_OpenSource.alx  Create_VC9_OpenSource.arx  Create_VC_Commercial.alx  Create_VC_Commercial.arx  Create_VC_Commercial.bat  DistConfig.xml  Doxyfile  Header_Commercial.txt  Header_LGPL.txt  IACF.iss  Install.iss  InstallationInfo.txt  Kopie__Create_VC9_Installation.bat  Prepare_ACF.bat  ReadMe.txt  Rebuild.bat  Rebuild_VC8.bat  _Create_VC15_OpenSource.bat  _Create_VC16_OpenSource.bat  _Create_VC17_OpenSource.bat  _Create_VC8_Commercial.bat  _Create_VC8_Installation.bat  _Create_VC9_Commercial.bat  _Create_VC9_Installation.bat  _Create_VC9_OpenSource.bat
(+834 files in other folders)
